updated scons build. still not complete but a good chunk of the way there.

--- a/VE_Builder/Preprocessor/SConscript
+++ b/VE_Builder/Preprocessor/SConscript
@@ -13,7 +13,7 @@ preprocess_srcs = Split("""
 utilities_srcs = Split("""
    setScalarAndVector.cpp
 """)
-preprocess_srcs = map(lambda s: pj('#', 'VE_Builder', 'Preprocessor', s), preprocess_srcs)
+##preprocess_srcs = map(lambda s: pj('#', 'VE_Builder', 'Preprocessor', s), preprocess_srcs)
 utilities_srcs = map(lambda s: pj('#', 'VE_Builder', 'Utilities', s), utilities_srcs)
 srcs = list()
 srcs.extend(preprocess_srcs)
@@ -21,8 +21,6 @@ srcs.extend(utilities_srcs)
 
 env = baseEnv.Copy()
 env.Append(LIBS = ['VE_UtilLib'])
-env.ParseConfig('flagpoll boost --libs')
-env.ParseConfig('flagpoll vtk --libs --cflags')
-env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
+env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
 
 env.Program(pj('#', 'bin', cfdHostType, 'preprocessor'), source = srcs)
