--- a/VE_Builder/Utilities/SConscript
+++ b/VE_Builder/Utilities/SConscript
@@ -83,10 +83,8 @@ env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
 env.Append(LIBS = ['VE_UtilLib'])
 env.Append(CPPPATH = [pj('#', 'VE_Builder', 'Translator')])
-env.ParseConfig('flagpoll vtk --libs --cflags')
-env.ParseConfig('flagpoll boost --libs --cflags')
-env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
-env.ParseConfig( 'vrjuggler-config --libs --extra-libs --includes' )
+##env.Append(CPPPATH = ['#'])
+env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
 
 env.Program(pj('#','bin',cfdHostType,'addNormals2Poly'), source = addNormals2Poly)
 env.Program(pj('#','bin',cfdHostType,'appendVTK'), source = appendVTK)
@@ -99,7 +97,7 @@ env.Program(pj('#','bin',cfdHostType,'convertVTK2Binary'), source = convertVTK2B
 env.Program(pj('#','bin',cfdHostType,'createMiniFlowdata'), source = createMiniFlowdata)
 env.Program(pj('#','bin',cfdHostType,'makeVtkSurface'), source = makeVtkSurface)
 env.Program(pj('#','bin',cfdHostType,'mergeVertices'), source = mergeVertices)
-env.Program(pj('#','bin',cfdHostType,'meshViewer'), source = meshViewer)
+#env.Program(pj('#','bin',cfdHostType,'meshViewer'), source = meshViewer)
 env.Program(pj('#','bin',cfdHostType,'moveFieldToPointData'), source = moveFieldToPointData)
 env.Program(pj('#','bin',cfdHostType,'removeVtkCellsOutsideBox'), source = removeVtkCellsOutsideBox)
 env.Program(pj('#','bin',cfdHostType,'removeVtkPointData'), source = removeVtkPointData)
