--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -18,7 +18,7 @@ env.Append(LIBS = ['VE_UtilLib'])
 env.ParseConfig('flagpoll vtk --libs --cflags')
 env.ParseConfig('flagpoll boost --libs --cflags')
 env.ParseConfig('wx-config --cxxflags --libs')
-env.ParseConfig( 'vrjuggler-config --libs --extra-libs --includes' )
-env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
+env.ParseConfig( 'flagpoll vpr --libs --cflags' )
+env.ParseConfig( 'flagpoll vrjuggler --libs --cflags' )
 
 env.Program(pj('#', 'bin', cfdHostType, 'vtkTo3DTexture'), source = srcs)
