--- a/VE_Open/SConscript
+++ b/VE_Open/SConscript
@@ -5,13 +5,15 @@ pj = os.path.join
 Import('baseEnv')
 
 env = baseEnv.Copy()
-env.Append(CPPPATH = [os.getcwd()])
-
-env.Append(CPPPATH = ['idl'])
+##env.Append(CPPPATH = [os.getcwd()])
+##env.Append(CPPPATH = ['idl'])
 
 target = ['module.h', 'VjObs.h']
 
-idlCmd = 'tao_idl -o ./VE_Open/skel -GI -I./VE_Open/idl ./VE_Open/idl/'
+taoPrefix = "/Volumes/data/VE_Suite_Deps/ACE_TAO/install/bin/"
+##Popen(['flagpoll', 'TAO', '--variable=prefix'], stdout=PIPE).communicate[0] + "/bin/tao_idl"
+##idlCmd = taoPrefix + 'tao_idl -o ./VE_Open/skel -GI -I./VE_Open/idl ./VE_Open/idl/'
+idlCmd = taoPrefix + 'tao_idl -o ./VE_Open/skel -in -GI -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ./VE_Open/idl/'
 srcs = ['module.idl', 'VjObs.idl']
 idlFile = [idlCmd + srcs[0], idlCmd + srcs[1]]
 for i in range(len(idlFile)):
