--- a/VE_CE/Utilities/SConscript
+++ b/VE_CE/Utilities/SConscript
@@ -5,7 +5,6 @@ pj = os.path.join
 Import('baseEnv')
 Import('libPath')
 
-
 srcs = Split("""
    Connection.cxx
    Module.cxx
@@ -18,12 +17,11 @@ srcs = Split("""
    OPort.cxx
    Scheduler.cxx  
 """)
-srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), srcs)
+##srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), srcs)
 
 env = baseEnv.Copy()
 env.Append(LIBS = ['VE_ModelLib', 'VE_XMLLib', 'VE_OpenModuleLib'])
-env.ParseConfig('flagpoll xerces --libs')
-env.ParseConfig('flagpoll tao --libs --cflags')
+env.ParseConfig('flagpoll xerces TAO TAO_PortableServer --libs --cflags')
 
 targetLib = pj(libPath, 'VE_CE_UtilitiesLib')
 env.SharedLibrary(target = targetLib, source = srcs)
