--- a/VE_Xplorer/GraphicalPlugin/SConscript
+++ b/VE_Xplorer/GraphicalPlugin/SConscript
@@ -10,18 +10,15 @@ srcs = Split("""
     cfdVEBaseClass.cxx
 """)
 
-srcs = map(lambda s: pj('#', 'VE_Xplorer', 'GraphicalPlugin', s), srcs)
+##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'GraphicalPlugin', s), srcs)
 
 env = baseEnv.Copy()
 env.Append(LIBS = ['VE_SceneGraphLib%s' %(execOsgPatTag),
                    'VE_XplorerLib%s' %(execOsgPatTag),
+                   'VE_TextureBasedLib%s' %(execOsgPatTag),
                    'VE_UtilLib', 'VE_ModelLib', 'VE_XMLLib', 'VE_CADLib'])
-env.ParseConfig('flagpoll vtk --libs --cflags')
-env.ParseConfig('flagpoll xerces --libs --cflags')
-env.ParseConfig('flagpoll osg --libs --cflags')
-env.ParseConfig('flagpoll gmtl --cflags')
-env.ParseConfig('wx-config --cxxflags --libs')
-env.ParseConfig('vrjuggler-config --libs --extra-libs --includes')
+env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+env.ParseConfig('flagpoll osg vtk xerces vrjuggler --libs --cflags')
 
 targetLib = pj(libPath, 'GraphicalPlugin%s' %(execOsgPatTag))
 env.SharedLibrary(target = targetLib, source = srcs)
