--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -90,8 +90,15 @@ xplorer_srcs = Split("""
     StoredSceneEH.cxx
     ChangeWorkingDirectoryEventHandler.cxx
     ChangeBackgroundColorEventHandler.cxx
+   DataSetAxis.cxx
+   BBoxEventHandler.cxx
+   WireframeEventHandler.cxx
+   AxesEventHandler.cxx
+   AxesLabelsEventHandler.cxx
+   DataSetScalarBar.cxx
+   ScalarBarEventHandler.cxx
 """)
-srcs = map(lambda s: pj('#', 'VE_Xplorer', 'XplorerHandlers', s), xplorer_srcs)
+##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'XplorerHandlers', s), xplorer_srcs)
 
 env = baseEnv.Copy()
 env.Append(LIBS = ['VE_XMLLib', 'VE_CADLib', 'VE_ModelLib',
@@ -99,13 +106,8 @@ env.Append(LIBS = ['VE_XMLLib', 'VE_CADLib', 'VE_ModelLib',
                    'VE_SceneGraphLib%s' %(execOsgPatTag),
                    'VE_UtilLib',
                    'VE_TextureBasedLib%s' %(execOsgPatTag)])
-env.ParseConfig('flagpoll vtk --libs --cflags')
-env.ParseConfig('flagpoll xerces --libs --cflags')
-env.ParseConfig('flagpoll tao --libs --cflags')
-env.ParseConfig('flagpoll gmtl --cflags --libs')
-env.ParseConfig('flagpoll osg --libs --cflags')
-env.ParseConfig('vpr-config --libs --extra-libs --includes')
-env.ParseConfig( 'vrjuggler-config vrj --extra-libs' )
+env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+env.ParseConfig('flagpoll vtk xerces osg vrjuggler --libs --cflags')
 
 targetLib = pj(libPath, 'VE_XplorerLib%s' %(execOsgPatTag))
 env.SharedLibrary(target = targetLib, source = xplorer_srcs)
