more scons updates to build idl files and to build library files and executable files in the build dir rather than the root vesuite dir.

--- a/VE_Builder/Preprocessor/SConscript
+++ b/VE_Builder/Preprocessor/SConscript
@@ -14,7 +14,7 @@ utilities_srcs = Split("""
    setScalarAndVector.cpp
 """)
 ##preprocess_srcs = map(lambda s: pj('#', 'VE_Builder', 'Preprocessor', s), preprocess_srcs)
-utilities_srcs = map(lambda s: pj('#', 'VE_Builder', 'Utilities', s), utilities_srcs)
+utilities_srcs = map(lambda s: pj('..', '..', 'VE_Builder', 'Utilities', s), utilities_srcs)
 srcs = list()
 srcs.extend(preprocess_srcs)
 srcs.extend(utilities_srcs)
@@ -23,4 +23,4 @@ env = baseEnv.Copy()
 env.Append(LIBS = ['VE_UtilLib'])
 env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
 
-env.Program(pj('#', 'bin', cfdHostType, 'preprocessor'), source = srcs)
+env.Program(pj( env[ 'BINDIR' ], 'preprocessor'), source = srcs)
