--- a/VE_Builder/Utilities/SConscript
+++ b/VE_Builder/Utilities/SConscript
@@ -86,21 +86,21 @@ env.Append(CPPPATH = [pj('#', 'VE_Builder', 'Translator')])
 ##env.Append(CPPPATH = ['#'])
 env.ParseConfig('flagpoll vtk Boost.Filesystem --libs --cflags')
 
-env.Program(pj('#','bin',cfdHostType,'addNormals2Poly'), source = addNormals2Poly)
-env.Program(pj('#','bin',cfdHostType,'appendVTK'), source = appendVTK)
-env.Program(pj('#','bin',cfdHostType,'combineFluentParticleFile'), source = combineFluentParticleFile)
-env.Program(pj('#','bin',cfdHostType,'compareScalars'), source = compareScalars)
-env.Program(pj('#','bin',cfdHostType,'convertCellDataToPointData'), source = convertCellDataToPointData)
-env.Program(pj('#','bin',cfdHostType,'convertSurfaceFileToStl'), source = convertSurfaceFileToStl)
-env.Program(pj('#','bin',cfdHostType,'convertVTK2Ascii'), source = convertVTK2Ascii)
-env.Program(pj('#','bin',cfdHostType,'convertVTK2Binary'), source = convertVTK2Binary)
-env.Program(pj('#','bin',cfdHostType,'createMiniFlowdata'), source = createMiniFlowdata)
-env.Program(pj('#','bin',cfdHostType,'makeVtkSurface'), source = makeVtkSurface)
-env.Program(pj('#','bin',cfdHostType,'mergeVertices'), source = mergeVertices)
-#env.Program(pj('#','bin',cfdHostType,'meshViewer'), source = meshViewer)
-env.Program(pj('#','bin',cfdHostType,'moveFieldToPointData'), source = moveFieldToPointData)
-env.Program(pj('#','bin',cfdHostType,'removeVtkCellsOutsideBox'), source = removeVtkCellsOutsideBox)
-env.Program(pj('#','bin',cfdHostType,'removeVtkPointData'), source = removeVtkPointData)
-env.Program(pj('#','bin',cfdHostType,'scaleVTK'), source = scaleVTK)
-env.Program(pj('#','bin',cfdHostType,'transformVTK'), source = transformVTK)
-env.Program(pj('#','bin',cfdHostType,'whatIsScalarRange'), source = whatIsScalarRange)
+env.Program(pj( env[ 'BINDIR' ],'addNormals2Poly'), source = addNormals2Poly)
+env.Program(pj( env[ 'BINDIR' ],'appendVTK'), source = appendVTK)
+env.Program(pj( env[ 'BINDIR' ],'combineFluentParticleFile'), source = combineFluentParticleFile)
+env.Program(pj( env[ 'BINDIR' ],'compareScalars'), source = compareScalars)
+env.Program(pj( env[ 'BINDIR' ],'convertCellDataToPointData'), source = convertCellDataToPointData)
+env.Program(pj( env[ 'BINDIR' ],'convertSurfaceFileToStl'), source = convertSurfaceFileToStl)
+env.Program(pj( env[ 'BINDIR' ],'convertVTK2Ascii'), source = convertVTK2Ascii)
+env.Program(pj( env[ 'BINDIR' ],'convertVTK2Binary'), source = convertVTK2Binary)
+env.Program(pj( env[ 'BINDIR' ],'createMiniFlowdata'), source = createMiniFlowdata)
+env.Program(pj( env[ 'BINDIR' ],'makeVtkSurface'), source = makeVtkSurface)
+env.Program(pj( env[ 'BINDIR' ],'mergeVertices'), source = mergeVertices)
+#env.Program(pj( env[ 'BINDIR' ],'meshViewer'), source = meshViewer)
+env.Program(pj( env[ 'BINDIR' ],'moveFieldToPointData'), source = moveFieldToPointData)
+env.Program(pj( env[ 'BINDIR' ],'removeVtkCellsOutsideBox'), source = removeVtkCellsOutsideBox)
+env.Program(pj( env[ 'BINDIR' ],'removeVtkPointData'), source = removeVtkPointData)
+env.Program(pj( env[ 'BINDIR' ],'scaleVTK'), source = scaleVTK)
+env.Program(pj( env[ 'BINDIR' ],'transformVTK'), source = transformVTK)
+env.Program(pj( env[ 'BINDIR' ],'whatIsScalarRange'), source = whatIsScalarRange)
