--- a/VE_CE/SConscript
+++ b/VE_CE/SConscript
@@ -16,10 +16,10 @@ srcs = Split("""
 env = baseEnv.Copy()
 env.Append(LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib', 'VE_CADLib',
                    'VE_ShaderLib', 'VE_CE_UtilitiesLib', 'VE_OpenModuleLib'])
-env.Append(LINKFLAGS = [pj('-L.', 'lib', 'Darwin')])
+#env.Append(LINKFLAGS = [pj('-L.', 'lib', 'Darwin')])
 
 env.ParseConfig('flagpoll TAO apr-1 apr-util-1 xerces TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                               TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                               TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode --libs --cflags')
 
-env.Program(pj('#', 'bin', cfdHostType, 'Exe_server'), source = srcs)
+env.Program(pj( env[ 'BINDIR' ], 'Exe_server'), source = srcs)
