--- a/VE_Open/SConscript
+++ b/VE_Open/SConscript
@@ -1,4 +1,4 @@
-##Builds ???
+##Builds idl skeleton files for veopen
 import os, sys, string
 pj = os.path.join
 
@@ -10,10 +10,10 @@ env = baseEnv.Copy()
 
 target = ['module.h', 'VjObs.h']
 
-taoPrefix = "/Volumes/data/VE_Suite_Deps/ACE_TAO/install/bin/"
+##taoPrefix = "/Volumes/data/VE_Suite_Deps/ACE_TAO/install/bin/"
 ##Popen(['flagpoll', 'TAO', '--variable=prefix'], stdout=PIPE).communicate[0] + "/bin/tao_idl"
 ##idlCmd = taoPrefix + 'tao_idl -o ./VE_Open/skel -GI -I./VE_Open/idl ./VE_Open/idl/'
-idlCmd = taoPrefix + 'tao_idl -o ./VE_Open/skel -in -GI -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ./VE_Open/idl/'
+idlCmd = 'tao_idl -o ./VE_Open/skel -in -GI -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ./VE_Open/idl/'
 srcs = ['module.idl', 'VjObs.idl']
 idlFile = [idlCmd + srcs[0], idlCmd + srcs[1]]
 for i in range(len(idlFile)):
