--- a/VE_Open/XML/CAD/SConscript
+++ b/VE_Open/XML/CAD/SConscript
@@ -23,5 +23,5 @@ env = baseEnv.Copy()
 env.Append(LIBS = ['VE_XMLLib', 'VE_ShaderLib'])
 env.ParseConfig('flagpoll xerces --libs --cflags')
 
-targetLib = pj(libPath, 'VE_CADLib')
+targetLib = pj(env[ 'LIBDIR' ], 'VE_CADLib')
 env.SharedLibrary(target = targetLib, source = srcs)
