--- a/VE_Xplorer/Utilities/SConscript
+++ b/VE_Xplorer/Utilities/SConscript
@@ -19,5 +19,5 @@ srcs = Split("""
 env = baseEnv.Copy()
 env.ParseConfig('flagpoll Boost.Filesystem vtk --cflags --libs')
 
-targetLib = pj(libPath, 'VE_UtilLib')
+targetLib = pj(env[ 'LIBDIR' ], 'VE_UtilLib')
 env.SharedLibrary(target = targetLib, source = srcs)
