moved utility files around

--- a/VE_Builder/Utilities/gui/Makefile
+++ b/VE_Builder/Utilities/gui/Makefile
@@ -1,7 +1,5 @@
 # Create the OS-dependent directory name
 APP_NAME= toolBarApp
-WX_CXX = $(shell wx-config --cxxflags)
-WX_LIB = $(shell wx-config --libs)
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx 
@@ -13,10 +11,8 @@ srcdir= .
 
 SRCS=\
 toolBarApp.cpp \
-readWriteVtkThings.cxx\
-cfdGrid2Surface.cpp\
-setScalarAndVector.cpp\
 spinctld.cpp
+
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
 DEPDIR= $(CFDHOSTTYPE)
@@ -29,11 +25,11 @@ DEBUG_APP?= TRUE
 
 EXTRA_CFLAGS+= 
 
-EXTRA_CXXFLAGS+=${WX_CXX} 
+EXTRA_CXXFLAGS+=
 
 #EXTRA_DEFS+= -DSJK_TEST
 
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer -I${VE_SUITE_HOME}/VE_Builder/Translator -I${VE_SUITE_HOME}/VE_Builder/Utilities
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}
 
 #EXTRA_DEBUG_FLAGS+= -g -D_DEBUG
 #EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
@@ -44,22 +40,15 @@ LINKALL_OFF=
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-EXTRA_LIBS+= -lm ${WX_LIB} /lib/libuuid.so.1
+EXTRA_LIBS+= -lm
 
 #vrj.appdefs.mk includes $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 
 #add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 
-vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer 
-vpath %.h    $(VE_SUITE_HOME)/VE_Xplorer 
-vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
-vpath %.h    $(VE_SUITE_HOME)/VE_Builder/Translator
-vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Utilities
-vpath %.h    $(VE_SUITE_HOME)/VE_Builder/Utilities
-vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Utilities/gui
-vpath %.h    $(VE_SUITE_HOME)/VE_Builder/Utilities/gui
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
@@ -70,9 +59,5 @@ cxx: $(OBJS)
 ${APP_NAME}: $(OBJS)
 	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-
-#install:
-#	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
-#	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
 CLEAN_FILES+= $(APP_NAME)
