--- a/VE_Xplorer/Utilities/Makefile
+++ b/VE_Xplorer/Utilities/Makefile
@@ -42,7 +42,8 @@ SRCS=\
    cfdVTKFileHandler.cxx \
    cleanVtk.cxx \
    fileIO.cxx \
-   readWriteVtkThings.cxx
+   readWriteVtkThings.cxx\
+   setScalarAndVector.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
