updated build to reflect moving files around. windows build will still need updated.

--- a/VE_Builder/Preprocessor/Makefile
+++ b/VE_Builder/Preprocessor/Makefile
@@ -10,8 +10,7 @@ srcdir= .
 
 SRCS=\
    preprocessor.cxx \
-   multiPlaneVtkOutput.cxx \
-   setScalarAndVector.cpp
+   multiPlaneVtkOutput.cxx
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
